fix(note-editor): share modal invisible in full screen mode

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -55,3 +55,7 @@ body {
     }
   }
 }
+
+.no-display {
+  visibility: hidden;
+}
